# umsh

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  amateur-radio.html  beacons.html  blind-transmissions.html  introduction.html  packet-structure.html  packet-types.html  payload-format.html  print.html  repeater-operation.html  security.html  toc-896734cd.js  umsh-cli-plan-feedback.md  umsh.code-workspace
crates/umsh-app/: Cargo.toml
crates/umsh-app-companion-cli/: Cargo.toml
crates/umsh-app-companion-cli/src/: button.rs  buzzer.rs  led.rs  lib.rs  panic_persist.rs  power.rs  rescue.rs
crates/umsh-app/src/: chat_room.rs  error.rs  identity.rs  lib.rs  mac_cmd.rs  payload.rs  text.rs  uri.rs  util.rs
crates/umsh-bsp-nrf52840/: Cargo.toml
crates/umsh-bsp-nrf52840/src/: cdc_rescue.rs  clock.rs  clocks.rs  flash_store.rs  gpregret.rs  lib.rs  panic_persist.rs  rescue.rs  rng.rs  system_off.rs
crates/umsh-bsp-t1000e/: Cargo.toml
crates/umsh-bsp-t1000e/src/: buzzer.rs  indicator.rs  lib.rs  panic_persist.rs  platform.rs  power.rs  preferences.rs  radio.rs  shutdown.rs
crates/umsh-bsp-techo/: Cargo.toml
crates/umsh-bsp-techo/src/: display.rs  lib.rs  platform.rs  power.rs
crates/umsh-bsp-wio-tracker-l1/: Cargo.toml
crates/umsh-bsp-wio-tracker-l1/src/: lib.rs  platform.rs  power.rs
crates/umsh-chat-room/: Cargo.toml
crates/umsh-chat-room/src/: lib.rs
crates/umsh-cli/: Cargo.toml
crates/umsh-cli/src/: commands.rs  events.rs  io.rs  lib.rs  logger.rs  mac_cmd.rs  peer_ref.rs  ping.rs  session.rs  settings.rs  stats.rs
crates/umsh-companion-ncp/: Cargo.toml
crates/umsh-companion-ncp/src/: duty.rs  lib.rs  session.rs
crates/umsh-companion-ncp/tests/: memory_budget.rs
crates/umsh-companion-runtime/: Cargo.toml
crates/umsh-companion-runtime/src/: counter_map.rs  driver.rs  duty_gate.rs  lib.rs
crates/umsh-crypto/: Cargo.toml
crates/umsh-crypto/src/: lib.rs  replay.rs
crates/umsh-flash-store/: Cargo.toml
crates/umsh-flash-store/src/: lib.rs
crates/umsh-hal/: Cargo.toml
crates/umsh-hal/src/: embassy_clock.rs  lib.rs
crates/umsh-journal-store/: Cargo.toml
crates/umsh-journal-store/src/: ble.rs  counter.rs  lib.rs  proto.rs  record.rs
crates/umsh-mac/: Cargo.toml
crates/umsh-mac/src/: cache.rs  coordinator.rs  handle.rs  lib.rs  peers.rs  send.rs  test_support.rs  tests.rs
crates/umsh-mac/tests/: mock_radio.rs  size_decomposition.rs
crates/umsh-mobile-core/: Cargo.toml  uniffi.toml
crates/umsh-mobile-core/src/: companion.rs  counter_store.rs  lib.rs  mobile_chat.rs  mobile_mesh.rs
crates/umsh-node/: Cargo.toml
crates/umsh-node/src/: app_error.rs  app_owned.rs  app_payload.rs  app_util.rs  channel.rs  dispatch.rs  endpoint.rs  error.rs  events.rs  host.rs  identity.rs  identity_responder.rs  lib.rs  location.rs  mac.rs  mac_command.rs  node.rs  owned.rs  peer.rs  pfs.rs  receive.rs  runtime.rs  text_chat.rs  ticket.rs  transport.rs
crates/umsh-radio-loraphy/: Cargo.toml
crates/umsh-radio-loraphy/src/: lib.rs
crates/umsh-radio-sx126x/: Cargo.toml
crates/umsh-radio-sx126x/src/: lib.rs
crates/umsh-sync/: Cargo.toml
crates/umsh-sync/src/: async_condition.rs  async_refcell.rs  lib.rs
crates/umsh-text/: Cargo.toml
crates/umsh-text/src/: codec.rs  error.rs  lib.rs  model.rs  node_adapter.rs  owned.rs  text.rs  validate.rs
crates/umsh-text/src/engine/: fragment.rs  mod.rs  repair.rs  sequence.rs
crates/umsh-text/tests/: codec_vectors.rs  engine_tests.rs  sim.rs
crates/umsh-uri/: Cargo.toml
crates/umsh-uri/src/: lib.rs
crates/umsh-ux-tracker/: Cargo.toml
crates/umsh-ux-tracker/src/: battery.rs  button.rs  buzzer.rs  led.rs  lib.rs  state.rs
dissectors/: README.md  (+2 more)
firmware-esp32/: Cargo.toml  README.md  partitions-umsh.csv
firmware-esp32/.cargo/: config.toml
firmware-esp32/crates/umsh-bsp-esp32/: Cargo.toml
firmware-esp32/crates/umsh-bsp-esp32/src/: flash_store.rs  lib.rs  panic_capture.rs  rng.rs
firmware-esp32/crates/umsh-bsp-heltec-lora32-v2/: Cargo.toml
firmware-esp32/crates/umsh-bsp-heltec-lora32-v2/src/: battery.rs  display.rs  lib.rs  radio.rs  vext.rs
firmware-esp32/crates/umsh-bsp-heltec-lora32-v3/: Cargo.toml
firmware-esp32/crates/umsh-bsp-heltec-lora32-v3/src/: battery.rs  display.rs  lib.rs  platform.rs  radio.rs  vext.rs
firmware-esp32/firmware/ble-spike-heltec-v2/: Cargo.toml
firmware-esp32/firmware/ble-spike-heltec-v2/src/: main.rs
firmware-esp32/firmware/ble-spike-heltec-v3/: Cargo.toml
firmware-esp32/firmware/ble-spike-heltec-v3/src/: ble_security.rs  ble_store.rs  companion.rs  main.rs
firmware-esp32/firmware/companion-cli-heltec-v3/: Cargo.toml
firmware-esp32/firmware/companion-cli-heltec-v3/src/: cli_io.rs  main.rs
firmware-esp32/firmware/companion-ncp-heltec-v3/: Cargo.toml  build.rs
firmware-esp32/firmware/companion-ncp-heltec-v3/src/: ble_store.rs  device_node.rs  main.rs
firmware-esp32/firmware/hello-heltec-v2/: Cargo.toml
firmware-esp32/firmware/hello-heltec-v2/.cargo/: config.toml
firmware-esp32/firmware/hello-heltec-v2/src/: main.rs
firmware-esp32/firmware/hello-heltec-v3/: Cargo.toml
firmware-esp32/firmware/hello-heltec-v3/.cargo/: config.toml
firmware/ble-spike-techo/: Cargo.toml
firmware/ble-spike-techo/src/: main.rs
firmware/companion-cli-t1000e/: Cargo.toml  build.rs  memory.x
firmware/companion-cli-t1000e/.cargo/: config.toml
firmware/companion-cli-t1000e/src/: cli_io.rs  main.rs  panic.rs
firmware/companion-cli-techo/: Cargo.toml  build.rs  memory.x
firmware/companion-cli-techo/src/: display.rs  main.rs  panic.rs
firmware/companion-ncp-t1000e/: Cargo.toml  build.rs  memory.x
umsh/: Cargo.toml
umsh/examples/: cli_companion.rs  cli_udp.rs  companion_dump.rs  companion_hw_validate.rs  companion_link_soak.rs  companion_probe.rs  desktop_chat.rs  generate_phase1_vectors.rs  repeater.rs  rf_probe.rs  simulated_repeater_delivery.rs
umsh/examples/support/: draft_serial_radio.rs
umsh/src/: companion_radio.rs  embassy_support.rs  lib.rs  test_vectors.rs  tokio_support.rs
umsh/tests/: companion_full_protocol.rs
(+4242 files in other folders)
