[workspace]
members = [
    "crates/umsh-core",
    "crates/umsh-companion",
    "crates/umsh-companion-ncp",
    "crates/umsh-crypto",
    "crates/umsh-hal",
    "crates/umsh-uri",
    "crates/umsh-chat-room",
    "crates/umsh-text",
    "crates/umsh-mac",
    "crates/umsh-node",
    "crates/umsh-sync",
    "crates/umsh-cli",
    "crates/umsh-bsp-nrf52840",
    "crates/umsh-bsp-t1000e",
    "crates/umsh-bsp-techo",
    "crates/umsh-bsp-wio-tracker-l1",
    "crates/umsh-radio-loraphy",
    "crates/umsh-ux-tracker",
    "crates/umsh-app-companion-cli",
    "firmware/companion-cli-t1000e",
    "firmware/companion-cli-techo",
    "firmware/companion-cli-wio-tracker-l1",
    "firmware/companion-ncp-techo",
    "firmware/ble-spike-techo",
    "umsh",
]
# Root `cargo build` / `cargo check` skips firmware/* so we don't try to
# cross-compile every binary on the developer's host. Firmware crates are
# explicitly built with `cargo build -p firmware-companion-cli-t1000e`
# (or by running cargo from inside the firmware directory).
default-members = [
    "crates/umsh-core",
    "crates/umsh-companion",
    "crates/umsh-companion-ncp",
    "crates/umsh-crypto",
    "crates/umsh-hal",
    "crates/umsh-uri",
    "crates/umsh-chat-room",
    "crates/umsh-text",
    "crates/umsh-mac",
    "crates/umsh-node",
    "crates/umsh-sync",
    "crates/umsh-cli",
    "crates/umsh-bsp-nrf52840",
    "crates/umsh-bsp-t1000e",
    "crates/umsh-bsp-techo",
    "crates/umsh-bsp-wio-tracker-l1",
    "crates/umsh-ux-tracker",
    "crates/umsh-app-companion-cli",
    "umsh",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darconeous/umsh"

# Override dependencies for the two audited forks carried by UMSH. Trouble is
# pinned to the pairing-policy gate revision; nrf-sdc/nrf-mpsl are pinned to the
# controller revision audited with it. Pins move only after deliberate review.
[patch.crates-io]
lora-phy        = { path = "../lora-rs/lora-phy" }
lora-modulation = { path = "../lora-rs/lora-modulation" }
trouble-host    = { git = "https://github.com/darconeous/trouble.git", rev = "fef9a7a95283be3103e638463a08d355077e2500" }
nrf-sdc         = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55" }
nrf-mpsl        = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55" }

[workspace.dependencies]
aes = { version = "0.8", default-features = false }
bitflags = { version = "2", default-features = false }
bs58 = { version = "0.5.1", default-features = false }
embedded-hal-async = { version = "1", default-features = false }
curve25519-dalek = { version = "4", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
hamaddr = { version = "0.1.0", default-features = false }
heapless = { version = "0.8", default-features = false }
# Pre-release version specifier is required so cargo will accept the patched
# `lora-phy = "3.0.2-alpha"` from ../lora-rs. The patch is rejected as "unused"
# under a plain `^3` requirement because Cargo excludes pre-releases by default.
lora-phy = { version = "3.0.2-alpha", default-features = false }
lwuri = { version = "0.1.1", default-features = false }
rand = { version = "0.10.1", default-features = false }
rand_core = { version = "0.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
zeroize = { version = "1", default-features = false, features = ["derive"] }
