[package]
name = "umsh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://darconeous.github.io/umsh/docs/rust/umsh/"

[features]
default = ["std", "software-crypto", "chat-rooms"]
chat-rooms = ["dep:umsh-chat-room"]
std = ["umsh-uri/std", "umsh-chat-room?/std", "umsh-core/std", "umsh-crypto/std", "umsh-hal/std", "umsh-mac/std", "umsh-node/std", "umsh-text/std"]
unsafe-advanced = ["umsh-mac/unsafe-advanced", "umsh-node/unsafe-advanced"]
software-crypto = ["umsh-crypto/software-crypto", "umsh-mac/software-crypto", "umsh-node/software-crypto", "umsh-text/software-crypto"]
tokio-support = ["std", "software-crypto", "dep:rand", "dep:socket2", "dep:tokio"]
serial-radio = ["tokio-support", "dep:tokio-serial"]
ble-radio = ["tokio-support", "dep:btleplug", "dep:futures-util", "dep:uuid"]
embassy-support = ["std", "software-crypto", "umsh-hal/embassy", "dep:embassy-executor", "dep:embassy-time", "dep:rand"]
cli = ["tokio-support", "dep:umsh-cli"]

[dependencies]
embedded-hal-async.workspace = true
heapless.workspace = true
rand_core.workspace = true
umsh-chat-room = { path = "../crates/umsh-chat-room", default-features = false, optional = true }
umsh-companion = { path = "../crates/umsh-companion" }
umsh-core = { path = "../crates/umsh-core", default-features = false }
umsh-crypto = { path = "../crates/umsh-crypto", default-features = false }
umsh-hal = { path = "../crates/umsh-hal", default-features = false }
umsh-mac = { path = "../crates/umsh-mac", default-features = false }
umsh-node = { path = "../crates/umsh-node", default-features = false }
umsh-sync = { path = "../crates/umsh-sync", default-features = false }
umsh-text = { path = "../crates/umsh-text", default-features = false }
umsh-uri = { path = "../crates/umsh-uri", default-features = false }
embassy-executor = { version = "0.7", optional = true, features = ["arch-std", "executor-thread"] }
embassy-time = { version = "0.5", optional = true, features = ["std"] }
rand = { workspace = true, optional = true, features = ["std", "thread_rng", "sys_rng"] }
tokio = { version = "1", optional = true, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-serial = { version = "5", optional = true }
btleplug = { version = "0.11", optional = true }
futures-util = { version = "0.3", optional = true }
uuid = { version = "1", optional = true }
socket2 = { version = "0.6", optional = true }
umsh-cli = { path = "../crates/umsh-cli", optional = true, features = ["tokio-stdio"] }

[[example]]
name = "cli_udp"
required-features = ["cli"]

[[example]]
name = "companion_probe"
required-features = ["tokio-support"]

[[example]]
name = "generate_phase1_vectors"
required-features = ["software-crypto"]

[[example]]
name = "desktop_chat"
required-features = ["tokio-support"]

[[example]]
name = "repeater"
required-features = ["embassy-support"]

[[example]]
name = "simulated_repeater_delivery"
required-features = ["embassy-support"]
