[package]
name = "umsh-bsp-nrf52840"
description = "Chip-level board support for nRF52840-based UMSH boards"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Chip-level BSP for the Nordic nRF52840. Owns chip-wide concerns shared by
# every nRF52840-based board: USB peripheral setup, GPREGRET-driven DFU
# entry, System OFF + button wake, retained-RAM helpers, flash-backed
# storage backends. Board-level BSPs (e.g. umsh-bsp-t1000e) compose this
# crate with their own pinout and on-board peripherals.
#
# See docs/firmware-architecture.md for the BSP / App / Binary triad and
# docs/firmware-plan-t1000e.md for the first concrete board using it.

[features]
default = []

[dependencies]

# Embedded-only deps. Gated on `target_os = "none"` so this crate still
# parses and unit-tests cleanly on host (the rescue watchers are pure
# logic and don't need any of this). When a firmware binary depends on
# this crate and is built for a bare-metal target, these come along.
[target.'cfg(target_os = "none")'.dependencies]
embassy-nrf = { version = "0.10", default-features = false, features = ["nrf52840", "time-driver-rtc1", "gpiote", "rt", "unstable-pac"] }
