[package]
name = "umsh-chat-room"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://darconeous.github.io/umsh/docs/rust/umsh_chat_room/"

[features]
default = ["std"]
std = ["alloc", "umsh-core/std"]
alloc = []

[dependencies]
umsh-core = { path = "../umsh-core", default-features = false }
