[package]
name = "umsh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std", "software-crypto"]
std = ["alloc", "umsh-core/std", "umsh-mac/std", "umsh-node/std", "umsh-text/std"]
alloc = ["umsh-node/alloc"]
software-crypto = ["umsh-node/software-crypto", "umsh-text/software-crypto"]
tokio-stdio = ["std", "dep:tokio"]
serial = ["dep:embedded-io-async"]

[dependencies]
umsh-core = { path = "../umsh-core", default-features = false }
umsh-mac = { path = "../umsh-mac", default-features = false }
umsh-node = { path = "../umsh-node", default-features = false }
umsh-sync = { path = "../umsh-sync", default-features = false }
umsh-text = { path = "../umsh-text", default-features = false }
heapless.workspace = true
bs58 = { workspace = true, features = ["alloc"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", optional = true, default-features = false, features = ["io-util", "io-std", "macros", "rt"] }
embedded-io-async = { version = "0.6", optional = true }

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
