[package]
name = "umsh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std", "software-crypto"]
# `alloc` pulls in software-crypto because umsh-node does not currently build in
# alloc-only mode without it (many CLI features — PFS, text chat — require it
# anyway). Users who want a no_std build pick `alloc`; users on a hosted target
# pick `std` (which implies `alloc`).
std = ["alloc", "umsh-core/std", "umsh-mac/std", "umsh-node/std", "umsh-text/std"]
alloc = ["umsh-node/alloc", "software-crypto"]
software-crypto = ["umsh-node/software-crypto", "umsh-text/software-crypto", "umsh-crypto/software-crypto"]
tokio-stdio = ["std", "dep:tokio"]
serial = ["dep:embedded-io-async"]

[dependencies]
umsh-core = { path = "../umsh-core", default-features = false }
umsh-crypto = { path = "../umsh-crypto", default-features = false }
umsh-hal = { path = "../umsh-hal", default-features = false }
umsh-mac = { path = "../umsh-mac", default-features = false }
umsh-node = { path = "../umsh-node", default-features = false }
umsh-sync = { path = "../umsh-sync", default-features = false }
umsh-text = { path = "../umsh-text", default-features = false }
heapless.workspace = true
bs58 = { workspace = true, features = ["alloc"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", optional = true, default-features = false, features = ["io-util", "io-std", "macros", "rt"] }
embedded-io-async = { version = "0.6", optional = true }

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
