[package]
name = "umsh-companion-ncp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NCP-side session engine for the minimal UMSH companion-radio protocol"

[dependencies]
umsh-companion = { path = "../umsh-companion" }
umsh-core = { path = "../umsh-core", default-features = false }
umsh-crypto = { path = "../umsh-crypto", default-features = false }

[dev-dependencies]
umsh-crypto = { path = "../umsh-crypto", default-features = false, features = [
	"software-crypto",
] }
